Major additions to landing-page index/ styles Add center content section to index/ styles Squash major styles bugs messing with flexbox sizing in Center Add Quote, Call to Action and Footer section in index.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
 .footer
 {
     background-color: #1f2937;
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 100px;
+    padding-right: 100px;
 
 }
 
@@ -22,7 +22,7 @@
     color: #F9FAF8;
     padding: 24px;
     padding-left: 80px;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
 }
 
 .header_text {
@@ -54,7 +54,7 @@
 }
 
 .banner_text button {
-    background-color: green;
+    background-color: blue;
 }
 
 .banner_header {
@@ -70,17 +70,17 @@
 
 .banner_image {
     flex: 1 1 auto;
-    padding: 40px;
     margin-left: 40px;
+    margin-bottom: 40px;
 }
 
 .center {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    gap: 40px;
     background-color: #F9FAF8;
-    margin-top: 24px;
+    padding-top: 40px;
 }
 
 .center_header {
@@ -92,30 +92,39 @@
 }
 
 .center_content {
+    display: flex;
     flex: 1 1 auto;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .content {
+    display: flex;
+    flex-direction: column;
     flex: 1 1 auto;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .content_image {
-    flex: 0 1 0;
+    flex: 1 1 auto;
     border: solid;
     border-width: 4px;
     border-color: #3882f6;
     border-radius: 10%;
-    width: 150px;
-    height: 150px;
+    height: 120px;
+    width: 120px;
 }
 
 .content_text {
-    flex: 0 1 0;
+    flex: 1 1 auto;
     text-align: center;
     color: #1f2937;
     text-wrap: wrap;
-    width: 150px;
+    width: 140px;
+}
+
+.quote {
+    display: flex;
+    background-color: #e5e7eb;
 }
